src/css/styles.less
/** grid.less and normalize.css helps to set the foundation for the customed styles**/

/** GENERAL **/
* {
  box-sizing: border-box;
}

body {
  font-family: 'Lato', sans-serif;
  background-color: @white;
  letter-spacing: .3px;
  a {
    color: @secondcolor;
    text-decoration: none;
    font-weight: bold;
    span {
      border-bottom: 2px dotted @maincolor;
    }
    &:hover {
      color: @secondcolor;
      span {
        border-bottom: none;
      }
    }
  }
}


.navBar a {
  color: white;
}

/** HEADER **/

header {
  margin: 10% auto;
  width: 80%;

  h1, h2 {
    text-align: center;
    margin: 3px auto;
  }
  h1.title {
    font-family: 'Lato', serif;
    font-size: 3em;
    color: @maincolor;
    padding-top: 5%;
  }
  h2 {
    font-size: 2em;
    color: @darkgray;
  }
}


/** MAIN BODY **/

.font-icon {
  margin: 0 auto;
  text-align: center;
  font-size: 1.5em;
}


.fundme-btn {
  margin: 30px 0;
  p {
    color: @black;
  }
  a {
    border-bottom: 3px dotted @maincolor;
    padding: 10px;
    cursor: pointer;
    transition: all .4s;
    &:hover {
      color: @darkgray;
       border-bottom: 3px dotted @secondcolor;
    }
  }
}

main {
  padding: 3%;
  margin-bottom: 50px;
}

.social-media {
  height: auto;
  width: 100%;
  margin: 0;
  a {
    span {
      border-bottom: 2px dotted @black;
    }
  }  
}

.quote {
  color: @secondcolor;
  margin: 5% auto;
  width: 50%;
  text-align: center;
  p {
    font-size: 1em;
  }

  .cite {
    font-size: .8em;
    color: @maincolor;
  }
  .cite:before {
    content: no-open-quote;
  }
  .cite:after {
    content: no-close-quote;
  }
}

.fa-code {
  background-color: @maincolor;
  color: @secondcolor;
  height: 100px;
  width: 100px;
  border-radius: 50px;
  position: absolute;
  top: 30%;
  right: 10%;
  z-index: -1;
  text-align: center;
  line-height: 100px;
  font-size: 2em;
  // animation: bounce 1s infinite alternate;
}

/** bouncing thanks to this article: http://stackoverflow.com/questions/32306089/css-smooth-bounce-animation */
@keyframes bounce {
  from {
    transform: translateY(-30px);
  }
  to {
    transform: translateY(100px);
  }
}

.main-btn {
  width: 100%;
  text-align: center;
  margin: 30px auto;
}

.paragraph {
  width: 100%;
  padding-left: 10px;
  line-height: 30px;
  color: @darkgray;
  font-size: 1em;
  margin: 5% auto;
  text-align: left;
}

.personal {
  margin-top: 15%;
  margin-bottom: 15%;
}
button {
  font-family: 'Lato', sans-serif;
}

.scroll-btn {
  background-color: @maincolor;
  color: @secondcolor;
  border: none;
  margin: 3px auto;
  padding: 10px;
  cursor: pointer;
  display: inline-block;
  font-size: 1.5em;
  width: 30%;
  text-align: center;
  border-radius: 3px;
  &:hover {
    color: @maincolor;
    background: @secondcolor;
    transition-duration: 0.4s;
  }
}

.project {
  margin-bottom: 5%;
  height: 700px;
  background-color: white;
  line-height: 2em;
  text-align: center;
  padding: 30px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.about-project {
  &:extend(.project);
  height: 20%;
  text-align: justify;
  .btn {
    margin: 10px 0;
    text-align: center;
    border-radius: 3px;
  }
}

.project-img {
  display: block;
  width: 70%;
  height: auto;
  margin: 0 auto;
  filter: grayscale(100%);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
&:hover{
  box-shadow: 0 10px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    filter: grayscale(0%);
    transition-duration: 0.4s;
  }
}

h4 {
  color: @secondcolor;
  text-transform: uppercase;
}

.keywords {
  font-size: .8em;
  text-transform: uppercase;
  color: @secondcolor;
}

.skill {
  color: @secondcolor;
  padding: 10px;
  margin: 5px 0;
  border-radius: 5px;
  background-color: @maincolor;
}

.project-btn {
  background-color: @maincolor;
  color: @secondcolor;
  border: none;
  margin: 3px;
  padding: 3%;
  cursor: pointer;
  display: inline-block;
  border-radius: 3px;
  width: 25%;
  &:hover {
    color: @maincolor;
    background: @secondcolor;
    transition-duration: 0.4s;
  }
}

.about {
  margin-top: 5%;
}

.connect-link {
  color: @maincolor;
}

/** sticky footer **/
footer {
  height: auto;
  margin-top: -40px;
  width: 100%;
  padding: 5%;
  background-color: @maincolor;
  color: @black;
  text-align: center;
  border-top: 3px solid @secondcolor; 
  p {
    padding: 40px;
  }
}

.foot-msg {
  color: @secondcolor;
}

.other-projects {
  text-align: left;
  h4 {
    text-align: center;
  }
}


nav {
  position: fixed;
  right: 0;
  left: 0;
  top: 0;
  width: 100%;
  z-index: 100;
  font-size: 1.5em;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
  ul {
    text-align: center;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: @maincolor;
    li {
      display: inline-block;
      a {
        margin: 0 auto;
        display: block;
        color: @secondcolor;
        text-align: center;
        padding: 14px 16px;
        text-decoration: none;
      }
    }
  }
}


.other-projects a {
  &:hover {
    color: @lightcoral;
  }
}

#profile-image {
  background-image: url('http://www.danafng.com/public/dana-avatar.png');
  background-size: cover;
  height: 150px;
  width: 150px;
  margin: 5% auto;
  border-radius: 75px;
  border: 5px solid @secondcolor;
}


/** MEDIA QUERIES **/
@media screen and (max-width: 1100px) {
   .personal {
    margin-top: 90%;
  }
}

@media screen and (max-width: 799px) {

  #profile-image {
    width: 100px;
    height: 100px;
    border-radius: 50px;
  }
  .main-btn {
    text-align: center;
    margin: 30px auto;
  }
  .quote {
    font-size: .8em;
    text-align: center;
    margin: 5% auto;
  }
  header {
    
    margin: 20% auto;

    h1.title {
      font-size: 2em;
    }
    h2 {
      font-size: 1.5em;
    }
  }
 
  .btn {
    text-align: center;
  }

  .project-img {
    width: 80%;
  }

  .fa-code {
    display: none;
  }

  .paragraph {
    width: 100%;
  }
 
  .scroll-btn {
    width: 50%;
  }

  .project {
    border: none;
  }
 
}

